--- a/result/2021-12-19.md
+++ b/result/2021-12-19.md
@@ -52,14 +52,15 @@
 52. [长沙检出2例境外输入奥密克戎感染者](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%B2%99%E6%A3%80%E5%87%BA2%E4%BE%8B%E5%A2%83%E5%A4%96%E8%BE%93%E5%85%A5%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E6%84%9F%E6%9F%93%E8%80%85%23&Refer=top) 161083
 53. [谭卓 搞笑女](https://s.weibo.com//weibo?q=%E8%B0%AD%E5%8D%93%20%E6%90%9E%E7%AC%91%E5%A5%B3&Refer=top) 157655
 54. [云南猪脚米线](https://s.weibo.com//weibo?q=%E4%BA%91%E5%8D%97%E7%8C%AA%E8%84%9A%E7%B1%B3%E7%BA%BF&Refer=top) 152042
-55. [已婚大姐装未婚诈骗数10人养自己老公](https://s.weibo.com//weibo?q=%23%E5%B7%B2%E5%A9%9A%E5%A4%A7%E5%A7%90%E8%A3%85%E6%9C%AA%E5%A9%9A%E8%AF%88%E9%AA%97%E6%95%B010%E4%BA%BA%E5%85%BB%E8%87%AA%E5%B7%B1%E8%80%81%E5%85%AC%23&Refer=top) 145051
-56. [民警为67位隔离小朋友讲睡前故事](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E4%B8%BA67%E4%BD%8D%E9%9A%94%E7%A6%BB%E5%B0%8F%E6%9C%8B%E5%8F%8B%E8%AE%B2%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B%23&Refer=top) 140981
-57. [男子婚礼前发现新娘出轨离婚获赔5万](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%A9%9A%E7%A4%BC%E5%89%8D%E5%8F%91%E7%8E%B0%E6%96%B0%E5%A8%98%E5%87%BA%E8%BD%A8%E7%A6%BB%E5%A9%9A%E8%8E%B7%E8%B5%945%E4%B8%87%23&Refer=top) 134177
-58. [2022年春运将于1月17日开始](https://s.weibo.com//weibo?q=2022%E5%B9%B4%E6%98%A5%E8%BF%90%E5%B0%86%E4%BA%8E1%E6%9C%8817%E6%97%A5%E5%BC%80%E5%A7%8B&Refer=top) 134062
+55. [男子婚礼前发现新娘出轨离婚获赔5万](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%A9%9A%E7%A4%BC%E5%89%8D%E5%8F%91%E7%8E%B0%E6%96%B0%E5%A8%98%E5%87%BA%E8%BD%A8%E7%A6%BB%E5%A9%9A%E8%8E%B7%E8%B5%945%E4%B8%87%23&Refer=top) 146139
+56. [已婚大姐装未婚诈骗数10人养自己老公](https://s.weibo.com//weibo?q=%23%E5%B7%B2%E5%A9%9A%E5%A4%A7%E5%A7%90%E8%A3%85%E6%9C%AA%E5%A9%9A%E8%AF%88%E9%AA%97%E6%95%B010%E4%BA%BA%E5%85%BB%E8%87%AA%E5%B7%B1%E8%80%81%E5%85%AC%23&Refer=top) 145051
+57. [民警为67位隔离小朋友讲睡前故事](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E4%B8%BA67%E4%BD%8D%E9%9A%94%E7%A6%BB%E5%B0%8F%E6%9C%8B%E5%8F%8B%E8%AE%B2%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B%23&Refer=top) 140981
+58. [2022年春运将于1月17日开始](https://s.weibo.com//weibo?q=2022%E5%B9%B4%E6%98%A5%E8%BF%90%E5%B0%86%E4%BA%8E1%E6%9C%8817%E6%97%A5%E5%BC%80%E5%A7%8B&Refer=top) 136190
 59. [六级翻译延安](https://s.weibo.com//weibo?q=%E5%85%AD%E7%BA%A7%E7%BF%BB%E8%AF%91%E5%BB%B6%E5%AE%89&Refer=top) 126772
 60. [重庆狼队对阵广州TTG](https://s.weibo.com//weibo?q=%E9%87%8D%E5%BA%86%E7%8B%BC%E9%98%9F%E5%AF%B9%E9%98%B5%E5%B9%BF%E5%B7%9ETTG&Refer=top) 117037
 61. [打工男子晕倒街头拒上120](https://s.weibo.com//weibo?q=%23%E6%89%93%E5%B7%A5%E7%94%B7%E5%AD%90%E6%99%95%E5%80%92%E8%A1%97%E5%A4%B4%E6%8B%92%E4%B8%8A120%23&Refer=top) 94850
-62. [早期片花里的周迅有多灵](https://s.weibo.com//weibo?q=%23%E6%97%A9%E6%9C%9F%E7%89%87%E8%8A%B1%E9%87%8C%E7%9A%84%E5%91%A8%E8%BF%85%E6%9C%89%E5%A4%9A%E7%81%B5%23&Refer=top) 55436
-63. [张艺曼获世锦赛铜牌](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E6%9B%BC%E8%8E%B7%E4%B8%96%E9%94%A6%E8%B5%9B%E9%93%9C%E7%89%8C%23&Refer=top) 32471
-64. [三天轻松玩转澳门](https://s.weibo.com//weibo?q=%E4%B8%89%E5%A4%A9%E8%BD%BB%E6%9D%BE%E7%8E%A9%E8%BD%AC%E6%BE%B3%E9%97%A8&Refer=top) 28870
-65. [为传承家乡手艺花7年雕一个作品](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BC%A0%E6%89%BF%E5%AE%B6%E4%B9%A1%E6%89%8B%E8%89%BA%E8%8A%B17%E5%B9%B4%E9%9B%95%E4%B8%80%E4%B8%AA%E4%BD%9C%E5%93%81%23&Refer=top) 20681
+62. [早期片花里的周迅有多灵](https://s.weibo.com//weibo?q=%23%E6%97%A9%E6%9C%9F%E7%89%87%E8%8A%B1%E9%87%8C%E7%9A%84%E5%91%A8%E8%BF%85%E6%9C%89%E5%A4%9A%E7%81%B5%23&Refer=top) 58862
+63. [张艺曼获世锦赛铜牌](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E6%9B%BC%E8%8E%B7%E4%B8%96%E9%94%A6%E8%B5%9B%E9%93%9C%E7%89%8C%23&Refer=top) 39828
+64. [三天轻松玩转澳门](https://s.weibo.com//weibo?q=%E4%B8%89%E5%A4%A9%E8%BD%BB%E6%9D%BE%E7%8E%A9%E8%BD%AC%E6%BE%B3%E9%97%A8&Refer=top) 32478
+65. [2000多年前中国就有了可调明暗的灯](https://s.weibo.com//weibo?q=%232000%E5%A4%9A%E5%B9%B4%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%B0%B1%E6%9C%89%E4%BA%86%E5%8F%AF%E8%B0%83%E6%98%8E%E6%9A%97%E7%9A%84%E7%81%AF%23&Refer=top) 22768
+66. [为传承家乡手艺花7年雕一个作品](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BC%A0%E6%89%BF%E5%AE%B6%E4%B9%A1%E6%89%8B%E8%89%BA%E8%8A%B17%E5%B9%B4%E9%9B%95%E4%B8%80%E4%B8%AA%E4%BD%9C%E5%93%81%23&Refer=top) 20681
